feat: Simplify Rust performance status command output and improve entity processing error handling